syntax = "proto3";

package user;

option go_package = "user-service/proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message RegisterResponse {
  uint32 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  string message = 6;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  uint32 user_id = 2;
  string email = 3;
  string role = 4;
  string message = 5;
}

message GetUserByIDRequest {
  uint32 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UserResponse {
  uint32 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  uint32 user_id = 2;
  string email = 3;
  string role = 4;
}